<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calc</string>
    <string name="msg">Enter a message here</string>
    <string name="message_container">Messages go here</string>
    <string name="action_settings">Settings</string>

    <string name="num1">First #</string>
    <string name="num2">Second #</string>

    <string name="button_add">Add</string>
    <string name="button_send">Send</string>
    <string name="button_rcv">Fetch Messages</string>

    <string name="title_activity_display_message">Message Title</string>
    <string name="msg_activity_display_message">Hello World</string>
    <string name="messages"></string>

</resources>
